@@ -1,5 +1,12 @@
 # $Id$
 
+2007-11-07	Ivan Y. Khvostishkov
+
+	* main/Utils/TextUtils.class.php: friendlyNumber(): bug with small
+	orders fixed.
+
+
+
 2007-11-02	Vladimir A. Altuchov
 
 	* main/Utils/IO/FileReader.class.php: new reader added.
